# ant_colony_hpc

./: .gitignore  CMakeLists.txt  README.md  antconfig.ini  antconfig_megamap.ini  antconfig_megamap_mpi.ini  build_getafix.sh  gmon.txt  gpuslurm.sh  mpislurm.sh  mpislurm_omp.sh  slurm.sh
docs/: ant_navigation.md  grid_data_structure.md  megamap.xcf  parallel.md  performance.ods  pseudocode.txt  serialisation.md  small_idea.txt  snapgrid.txt  tutorial_notes.md
docs/data/: performance.ods  performance_mpi.ods  performance_omp.ods
docs/images/: ants_legend.xcf
include/ant_simulation/: ant.h  colony.h  colony_record.h  colony_tile.h  empty.h  entity.h  food.h  pheromone.h  tile.h  world.h
include/ants/: ant.h  colony.h  colony_tile.h  defines.h  food.h  pheromone.h  snapgrid.h  utils.h  world.h
lib/lodepng/: lodepng.h
lib/log/: log.h
lib/microtar/: microtar.c
lib/stb/: stb_image.c  stb_image_write.c
lib/tinycolor/: tinycolormap.hpp
lib/xoroshiro/: XoroshiroCpp.h
paper/: README.txt
results/: README.txt  normal.tar  with_sin.tar
results/gprof/: gmon.out  gmon.txt
results/results_old/: README.md
results/results_omp_final/: README.md
results/valgrind/: README.md  cachegrind.out.473541  callgrind.out.1076540  callgrind.out.1246534  callgrind.out.2233942  callgrind.out.469754  callgrind.out.526840  callgrind.out.966881
scripts/: ants_time.py  hash.sh  make_gif.sh  makevideo.sh  upload.sh  visualiser.py
src/: dump_random.cpp  main.cpp  pheromone.cpp  tile.cpp  utils.cpp  world.cpp
